--- a/Inventory Manager/Sales.resx
+++ b/Inventory Manager/Sales.resx
@@ -117,6 +117,171 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="guna2Button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAn
+        WwAAJ1sB4ns9eAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAARFSURBVHhe7Zrf
+        axRXFMcDov4BtT70UVoUS20haObOWhCauXdXWqVoisY3KWIl1Qd9So0ttGmFBPsPtET8UUQh/fXgi7Z5
+        KrZgqA8+9aFNdmfuZt0UbXwKJNNz0oPObk5n1smd2bu4X/g83XPP93tvJrNzd6enq666ykRzu/u3aKHO
+        Ba68Egh1PRUwF3tgL2rbGQqEdyoQchEIDbEIm3GS2tst35HvMAswQlXIt8nGXkHQu83BzaGmycZO6b7S
+        9qbQi4GjjmvhDaQB5670iPRED7KzT74rP4mGBW7SUGphj2hP7ciPacg+wc3vt2hYX8ijNJRa2CPaE/iV
+        huwThHsUDTtb8F6iodTCHtGewN80lI8qrvcGmH4BXF31Ob0K+ZhCrgB/vbovVHktQJ96tCewwHtHwazy
+        88pu9TotI50CR34KjZbJuBNZwvsSLefZFLjqANOwI/FdtZ+W1brg8r3NNetQpmhZrQsm1ZqadDL/0LJa
+        F0x6vjcATmG3mEadiSN/omW1LnioeZdt1oHgAY2W9WyiR9ul5oYdxBKcKUZoOelU7ivugI/EUWjWwoOQ
+        JeCXMK78rCr6X6NldNXVWqWFPMNebhaCWSm2OcE94GLk5mI18Og7QbHNCRp/2WxkMRcotjmtfMXNm1nH
+        mj/6OMHDxIecmY34Qg1RbHOCx8kjnJmdqEGKbU664O3lzexDO7JEsc2p4hYFZ5aIq8LapWvhfKUS1n+5
+        E+p9g3wdgGNYg7U4B+dydUlUC/0OxTYnaLyt2agVqkeHwvkHtSfUJi6zdQiORWtxLleXhF8obqXY5lR1
+        5WbOLInqmZGGRT347ke2DsGxaC3O5eqS0G+WXqTY5hT29q7nzJJoxwZgVoptVtC84WvvVmjDBixQXPOC
+        I+YsYxhLGzZghuKaFxwy7jGGseS+AY78neKaFxhMrTJMIP8rwPuZ4poXGHy72jCe/DdATlJc84J/ga8Z
+        w1jasAFfUVzzChxvnDGMJe8N8IUco7jmBTeYjzjTOHK/AhxvmOKal3blCdY0hurp4YZF1Sa/Z+uQ2uQP
+        DbU4l6uLAw5CH1Bc8/KFd5gzjUPvPxzWdfBkUXOjY2wdMjc6/nQDAj/24PR/+K48RHHNKxD9ijNNQh87
+        Fda+uf7f4gtFtmYFGMNNwNrq+yf5miRcT1Jc89JC7WJNLUK7xZ0U17zKfd4rnKlNlIV6meKaV9C7ZxNn
+        ahOVXW+9QHHNKxwYWAcmNr8ztIwZKW42ApOGV+Es4yHFzE5w2PiLMbaFPylmdgqEmmaMbeEuxcxONr89
+        hq/1UMzsBEY3mo0t4gbFzE542mKMrUA73nmKmZ1sfnnKd7x9FDM73X91YIMW0ucCtJkyZqOY2Uo76j0m
+        QHtx1QGKl4/wN3g2SDtw5VmKla+0Kw+m+a3AIDO5/+Wb9UeptBFvPvTpkMO7hPIqeuHbn+hNMbrqqqs0
+        6un5F4Mv5TdAXoaNAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="guna2Button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAWEAAAFhAfKe8T4AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAEZUlEQVR4Xt2bXYjUVhiGV61SWytSqkKRIlqoiCwFKVTwYn72QgTBmwFFdicztiLeeFERSifLuWll
+        k9ClQmkXeqM7GZe9UPDKP/wtxZZCaa9qoQqtLRaKhW2SWVhL+p31y7KbnEyS+SZzkn3gZX+S8+Z9v8lk
+        dzazA8uVQtN5t9i0vyyZ9vcl03oAug2fN8otazPusjzZM+2uLZnOeSjrhsgqN60q7r68KEy76+CRviMo
+        HVTTfh+XLQ/my7esu8KyYs0WLrS34vJ800X5eZVN6zO0yDGuuwKe8zdFBaPl/Iwu+abUcg5DoWfBgpFy
+        0CL/wKNZgUJzvoJR+huX5wv+nB86334Dv1wg+Zng3MSl+eHAhPsSD1407d9KU7Pb8dsLJBpCy34PlwWp
+        nx57pcaMnVXV2N1rcV/G2At4qNh45b0ClCGUTfuHwi13aQYItVJRNaWm6t8oqv4fyE1P2q9Hmb4LDx2J
+        v7ynsCGUTecQbA8bwh+B3wHqbOx1CHY/GDQ9VUf1e3j4joSV9xR6JogvjE/KzX934i7PGWb6JkU1HolC
+        pqwZjBBKVHlPMYcQLM+BIFd9wfqlKxhBSNzynjoOoWU/FpavN/QhQbD0NWp8q7Azob+LJy3vKWwI/FUi
+        froUuOCdEwZsaM0RVd9TZ+Pbeq3ah59sxMML6ba8p7AhCIGyDwPlI07NNKGW9xR7CFC27SsPp6cu5bVy
+        r8qjxBc8P4Hy8wPQKri5b0gpz8nCAKSV58gegNTyHJkDkF6eI2sAmSjPkTGAzJTn9HsAmSrP6ecAMlee
+        068BZLI8px8DyGx5TtoDqEy7a2LfropQ2bT/LE7OvIXWvSHtAUD5YVGZpEqlPCf9Adhf+Mt0od6e9ovp
+        wwC+85VJqo7lh0/pL9dGNUNp6D8qqnZJYcYO3BSPNAewe8JdDQXavkJJFPnIQ/GvFmevqvrvJ9jn63Bz
+        NIsXL6hHAyiY1tuCUnEV67SHvP/48/M/8+HmaPyL59WjAfA7L4JicRT7OU/OTzboABTp5gKY6IJHzk82
+        6ACUSXoBTFSeQ85PNgihiwtg4vIccn6yQQjlljUoKOnX06JpXwd9XGg6W3BpIsj5yQYhFCZn34SCi29O
+        PoXXAzeKLWcMPlaGzNltuCsJcn6yQQf4mxV52dg3KbqAnJ9sIBlyfrKBZMj5yQaSIecnG0iGnJ9sIBly
+        frKBZMj5yQaSIecnG0iGnJ9sIBlyfrKBZMj5yQaSIecnG0iGnJ9sIBlyfrKBZMj5YYEdMFCN47g50xxj
+        xmvB7KCGth93iQYW/BIwUPWv+TvHcZfMUm0YHwiyuyNMH8Rdoqmp2oTIRFG1a0rDOCh6v79sjYyOFfnd
+        oKqqzwmy/1WpTK/CetHwt8MKTHIrGIqO1eIDj/SUyCx/0p4cZZ++irXic4SdXQ+LfxKb5kbt+kfGXqyU
+        HIWNbwCTyz7TnIj/s4fxDlahAT9C9tVU/SIYW8EDZUrPQPfh6XtSYexFjJ+QgYH/AUQBiJw8bGc7AAAA
+        AElFTkSuQmCC
+</value>
+  </data>
+  <data name="guna2Button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        YAAAAWABINkT2gAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAsDSURBVHhe7Zv5
+        U1TZFcfNnlRSlcoPyQ+pyn+QX1L5IZWa+W2qMpkpdRYHm25sVmlBEGRVFHAbV1Qy4iiyw6DsWyOLyiC4
+        AcqoYxwdcAABcUMgblFBOTnn9evud1+f3h49WJPyVn0Kut+7957zfXc55z5Y8KYwBSbq/wQTNZkwVdMD
+        kzUD3vBwqGjsUvuWaVf0d+95zNV1yVRNH/5sgcnaAIDKn8im+r7ARO3fsaMpBLQw3p8HPS1pLrnSsZWt
+        6zETNbUows9lk31XYLTyV9jBiEOHXnDnWjbrtJKLbZvYul6SIpvtu4LDK4rpyCtGvs5inVZyvjWdniJb
+        3wsmYajwl7LpvinYaK+qE68Z7M1knVYzc7+Sre+MV6Nl8PyrHHh27gA8/fIz6eejhl3J9/38fiObP7eC
+        T//PXMfe0t+9m3VYzbPbR9j6VmbvVsCT1kwY350Mo6ZguOnv74q+IX//Q0N6/T/Bz0/bAglT1Xs5Q7zl
+        m9M7WIfVPB4uYeu/HCqFydx0GAk2co56wq2bOl38XaPx17Jr7gvAyZ9i53fUxmjh65NbWIfVTH5XINYd
+        r4KHFdtgODCAc0piGLkVYJAYNRjgpl7P3icziteXyC66LjBV+4FgzBzoPb6RdVjN/b4cW52ZgS/gzvpo
+        ByeG0cHx4EB4YgqDmegVALGRArPIdJQJHoWHwr1AfsSgaIVuRwNMVtcrndDK7EQ1Opfu4CzH2NUDUp3p
+        bwphNCJEbTRMhgXDq5gIB6ddQSKRYMq2ZC7c8PP7veyuWOBx7R/QkGmlI1p5ca+cdZZj+FIWTF8tgJEw
+        0eB7QUb2aTuwcw1Awx6ArDSHay9WmmBsmTiVhnS6K8MGw+9kt+0FI784zhktPL1VyjrLMdC5y+HJT4QG
+        OzgjkLwKoBSjyGtF9n5x7YAk/F517yyOnvsoprJ9nFKdvSbTz2TXLQUbuWxrbI48HCpmneUYTAoXjHts
+        CnVwwgY97RP7AO6hs+p+KaBKjObrIQ9CgoR+cCTslF23FM44rRwvWQWHEt53S3PkR4JRk86ePDnex2+X
+        NgYP83Wt4Ei4Ky6QrzBm+Jvs/vwLkJe4CPr1S20G3Q1cxhtOnD3IO63kqzy+rgJaTG/RtmkXoUt2f54F
+        SFwIjUEL7YbgNkfbGGe0RO5G9znDg2qAc9kAW5P4NmSerAhTCgCDOt0/5l2AzJh34bq/n82IidAg1liB
+        rFSA2xW880pIiMa9AKuZNmRuizvD0XkVIDt5EeQZ31EaAC9XebDdEZvina8FDRnitfYspyI8jRBGwbQU
+        G3COaMWpAInvw86Id6AlwD78KXLjjHQKbXU01JXOE2mrAeJXAjT/y/5dxQ62DYocRwxC+GyYFwEOJi2E
+        zYFvwUX9x7bOH4aHsEa6hJ6sGYMfjDglR8fK8Tt03nqdtkr6nrbL9DixrowyUqQMcl4EoLm/JfBtGPDX
+        2Tp/jtEaZ6BHZG8A6MXVP3+T+D2NkmE5zW7C9UB5TeYRCm+1ATntVoD28gQo266H7uZU9rqStsOroTHb
+        BDWZQVC3LwTMB8KhIiMA8j5dCp+vfFfZsddxvsfU7LIIMFjKXv9vxHKlHWOuBWhOg8Obl0pPsSk3gr/H
+        DZ21yVCZHY4LtLgNccb5BAqeSABijWOITCNPYccTlwIcK4q2DeP8lMVwrnEde58rTpTHSwIc3R1q65iy
+        PbVhPmMdLopWAZjY4AXGHQoBZpwKQEO+KPUjmwBEfVYoe68rmkpjJAHMmeIImI0RDfMZG3DLtApAv6uu
+        P48UcpBJpwK0FkUJzhO5axZJ04K73xmNxdGSADWfC3PPs5RXC/sxPSbnx3GnSIhyuC5EhHr9t86nADp6
+        CudvYeqHkvO0qJ1pWMvf6wJzYZQkAHEj0L4HU1CiNs7GwXTLaq5e5T2BAiES4HI+e30qzH7Aipmh2fUi
+        iJRu8ZMEaM6LZK+7QynA5ahlts4nXYXBdRjdkRO0z6fE8PdwbE6wnA9Q3ZKt7D13jPZweFinS3crwFxp
+        LLFMAeLUentuTtkZZ6BESqzFeXKE9vt4x6HsAK3414stdWgLZOq8xGln7V8SQK9/+3sXoPVwrE2A+s+W
+        U/RlM4D2ZLWRNvJw+FsjPhrOG/jITmJ7sj0foLm/ey17n3L4I2PSOwTOaF/yZWWiTQDiSqR9GtC5HR1Y
+        cMZKlGNMbxWBhvbJ/ZgiozC7cK/PSAEo2Gw5M6BMkO65j/fkYArNtPVyVYSQB+DT3+42G+yoSoSW/JXQ
+        XhbHXveEM+YUQYDWbeI5oMujMIIOPa3hrSu+xeHv5MkTEyHC4euzEX//P7oUwHxgORRvWCLt/WXb/fFh
+        GKCbuc8TavMiBBGUo2DE3aEIQdsZLWoXcgDuKt4p3sJ1ogszxDwcCXGKpEiFKg22P30qnMGnapIk57ua
+        7PF/1e5l0FKwUrjPU1rLVgsCUFg8aLAbRFPBq9yADkETPVgYERJXlQIPCS9KOIPbcOHKw6Anf+1iyCPw
+        99zkhVCnIRIkzmIIXYVJklKEzjTxhSdtTzRPOSe0QmEvvUZT9DMzvHTpW7LrlsIZrKQo7WNNOYCaZjkk
+        VnIhTjy3H0Vj6aUG54y3PMWIj16tKdvHHCRcdtteOGOVUD7Q5QMBzh1dD9WHVggCVB0Mh4sxDi8vpO1K
+        a7o8E23iXo/N3tTpkmSXxcIZS9A5AIW/BSkfCGvBXGivShAEkERAehIdX2zS4vif5SFS8MI5qobm+kRI
+        EAootoM8x5A3RHbXsXCGEl30xDIDoSlH2zmAM7ipQLRtDobvjOKQtUKnueTcI9wyaWhTAPUUeRgeCg9w
+        e1PNcyV9wwbDX2VX+cIZ+X3S3ZJqyxDV1GUth/PxRhhyfIreodNN4c91N9577xeym84LZ6QSmv/t5fHs
+        Na10Y6Z5tGQVKwJBIXNXciD0K7JHD7lKc33Az++3snvuC2egEjoPLFj/IRzDp8Zd1wyKcOyIGB+ooUWy
+        KSMUTmMS1bvaCFdXBMD1sADoC9bDtTAD/DsiQBoxHenB0P55ZIfskneFNQ5pL4vH4McoRYBn6taA+SA+
+        FVwXuHvnQie2XZcfyQrgDc1fxDTJLnlXOKMIOgSlc4DqPYHS5/r9YVJApDUadAWtC22Yd6hDZk+hneRY
+        WWyl7JJ3hTOIOFESIx1rn61PkT5TFJibtBCO5pgc7vUVlGt04IhoKY1FMdyMikPh0FAUBcfL46RIs6c1
+        LVl2ybvCGdJSECUNffqdhDhTvwa6m9ZLR2QUGJ01zz0w8oRz1Gf9WjiJuQnFEO3VSdBRkwynG9ZKo0a4
+        35cCUOJz+FMdVOwKgPx1i6U8gN760GdaENvwCXH1Xiu+FIAWu46KBAkaCZQSn8W8nj534lzl6rx2fCnA
+        D5I3ArwRwLdrQHH6EmnF56DTIk/eFs8rb0aAL0cA7r+VGcukbY+jMsPIjgDaKimFPrLNH8p26KVQumTT
+        J9IuUojbpxlje4omzdkmKMd21PXnhK9HQEdlom0rVONsK3T6N0IM9MqNa0MzvhSAQlJyhv4+gIOiQ+4t
+        8f+PADgF6veHQv2+EJYGTIy6mWOyH6oALxwa08jrFKC7NTVWdsm7cr4l7Yq6MWkbxK2O2wKJ4g2fOF0E
+        OWc5fC5Ac6rlT1+9LahcFNegFl6jAH29var/A/C0wMaNP+5pST3CNOo1r0mA8QvNaX+R3dFWABb86Hxz
+        egA2dgxX9378OaCFE6Uxt3G/n/aEsu2GJ1wbHtOaeqmnJX3vmeMbLW953xQtZcGC/wHAUq9o6ikPMgAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="guna2Button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAeASURBVHhe3Ztr
+        bBRVFMerUT+JrxA/K3RnVURBIDF+8oNffCUCihAVlSA+YqIgiX7gJT4iIPj4YCRRUaGzS3lJoBgeggWK
+        SKFFSguoUF5qW/qAAqU82uP5z95NZ+6cdWZnZttdT/IL25lz7j33zn2eeynKtdD3A2+lRPxJShgzyTQS
+        /HsP/z7CtDKXFPjNz6x3JiWNGWTGRsNWJVNYwgUYwQVZQIlYDf/bzVBA2JbTMI35XDnDVfL5KbSk+AZ2
+        dio7XacVIjpMo9bKY3W8n8q274VKB93Cjr3LDqIZy45HD/KaRSWDb1Zu9L4QFV3FTX08O9Jkc6y3aaFk
+        /A2aVXS1cqt3hEoHFnPmFZozfcl2ShYPVO7lVjizkfzl2zQH+h7TaGe/xio3oxc0M0rGPhEzzycwY0Td
+        JXigu44TN12Z5S3xElo47FrlfjixCp80yuSM8pq1oSvBGulN4zsh8ULBDNUdCqLPexKfp4qTnfD8+pSc
+        YAFixsapYvkTzKlseNqVUOFymkqMAap4/y1Wvw+7yNn6ClHDdqKjq4kOfUu071OiyplE214n2vQMUdkj
+        RCvvl22XDSWqX0W0eTz/HXe/D85WlE0VM7PwoDdRMM6eg98QUXdmmn6V7cpf7tE5e4yoYjI/j6giTON5
+        VUxZrI1NwjjlMgxC8g6i1lpnoe38PFG2Q4vRdVFZZQ/L+tnRSItuu0kV1y281ZwtGGVP6b1EdQvZ9yvu
+        woC2OtbL8FVPH5JtLp/jrvWqbJMNSWOGKq5TUvv5CLa0Pz5GdO64XIg0FW/KtqiUms+Izp+U7VChu2cL
+        dlnRIsYTVDBDMvDP5heILp2RnU/TXs9f4U7ZPg26z853iC40CWl0qXFBsPNL0piiit0jVuhJUvbLxqeJ
+        rnS4He66RHRqd8/fu6bJ9hLLhxGd3ORMD3R18mwyTrbxg2nUqmKnhGsEMTxZ2Q9rHiLqbHU72naAu8Tj
+        PCYM5pbRTtTxD9HSu+U0MoHWcHCRO+2z3JJK75FtfFE8VBUfXx8BTEnJB3CwqdLt4N887WJOT+vV/0BU
+        /ZHT1jc8NhxZ4c6j9gtB1y+2JTI/2O9W8Mme992OYdrCV7frYQFkr5BsWTrIPa2iK6x6QNb3ImlUpwpv
+        xe0Dhq6X8XTX2ex0qqOBaMUIWT8s60dxFped+WHWkHS96eaxoD9/fevQQlLwBk3a7gzASk7SjYpja535
+        dTTy1/SYVTKRjI1C85/leuEXfdGC0V7SixLMNvY8wfrRsq4n8elY+yfklx5gwaM7Uj5J1o0afaFUPVfW
+        88KMLcEUuFt86UXVB04nOlt4oLpL1o2a+pXOvE9skPW82YUucFR76A9Ma3Ynjq+T9XKBPvM075X1vDmC
+        CmjRHvqjZZ/Tib0fy3q5YMcUZ97nTsh63pxCBVzUHvpD3/DseEvWywXlLznzvtgm63nTGbwC9PkfUSBJ
+        Lxegsu1542NIet5YFRCsCyBaY3fil6myXi6onuPMu7VG1vPG6gLBBsHmaqcTVR/KerlAXwwhhijpecOD
+        YNBp8MT6qJzIDqz69DgBZgVJ1xtrGgx25ofFh92J83/JelGzZYIzX4Att6TrzWJUwEztoT+w/NQd2ThW
+        1o2Shgpnnmf+kPV8EZvGS+HYaPmlB2iK2IjYnUHflHSjQvr6gWMMFiPDbYexFbU7g6DlhjGyblhWDHfv
+        ATAVY0su6XvTZW2HrZhA0HggghEIStidat0fbk+AkLoe70MwRG/6IPjgB6qswkP4j+Ahsbov3Y7hSCzo
+        ac6e95S9+htfWAqMYuuNcJzdNhvM+FxVfFRAfLio5AcEJhGg1B088FX2DqLloJkjgIqQGk6DsMjR00YA
+        FoFYKQ2/lMSGqOKnJFRYHE1W7woAa4Xl98k2Ejvf7rFt3El05YIzPYBnCIpI9n7Rw+KQ0Acj1vq8y+0w
+        Zgosk71aA95jStPt7aBlbHlRts8G8WBkdbwfvwx3NIZBKdN5IPYOvy1gvQxjA47OJbs02PAEX/DYkY/G
+        INw0cOVVMvIPTn0zHY+1H5ZtQHOVbINW9WciXEjdQXy6Kq5bcPeWlcJffcUFCJwN6IX5fbGsjzNFXTcN
+        ptWgM4qbBiodcKMqriyc2QTBMADsNA4x7dvmba8JekzDDmehdTJVXPY8p4qZWdQVme2aYQi4InDdBXM7
+        VnOSDhZU6x4l+unZ1NE5jsBrPk8V/FhZakYIG3AxjXJfV2Qg/7tLUrjb7PeSVFr4ywU/Mco3cAIURLjZ
+        zBcTLCSSsTmqONmLGg8WuRItGOIloW+O48Ix96FCvCy9Jrob41sevIaXyl8LmeQriyMrfFpS3SE+T8gs
+        n+hGn/c93QURHhif4Ix683+I+eUM7/HHKDdzK5hTOcOtmgN9BxY5pfHblXu9I1aXSP23uUaXQ71HC/sw
+        KadN3ktw95admGE5IzuZC5p5PJruubHpTaHSQddzRUxh54LfOPPEilpNRl4q2/wUXEJUM8ZepqunAFnT
+        xZVajQCmK4ZXKMIDVH+sxfnrTbNWZgmjkjnMoMvgaB7gN55V4t5OStcYCVuVTI6kqOhfqZ2szjsmZTMA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2Button8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMdSURBVHhe7Vtd
+        a9RAFF3q7/ADNYnVF5VWf4lWatcvxN8xSVdEQUF91VZf91nxSewv6G5LfalNsg+yYoUVoda2wo73Lrek
+        JnfbZLvTJLNz4MAyuXdyzyGZ3CyZioGBQSacC8UpO/QeOIGYtX0xbwduPVdCDb1aoCasjcocMmT9mOW7
+        d+GETaAsOBtW6N2pSDFG1R8OMNlVO3RXmBMVncu2702SjMEAwqdgos3YxGXilh14t0hONjiBew0m6MYm
+        LCO7lu9Nk6x06F32gfsnNlGZuen4YoLkHQBY8Ep6zx/E5VQLo+N795hkTZhiPYDAMjzqBuUiyeQxHtRO
+        Mklacd9mCbspLkkvevdJbhJ2IB7ySfoQ22aSmwT19myiLrRC8ZrkJgEB+ILBJmrEOslNAg/GgnVkMQy4
+        ENZktf22x/PhLBujiPkbcKX1RK7t/JC7WN1el5MwxsUqYP4GvPy5QNIjPO98YmMVMH8D3m+skOwIOMbF
+        KmD+BnzY+EyyI+AYF6uAxgCSmwQejAUroTHAGGAMINkRjAE6GIAdHjY57+CZjoL68dvfXyQ7Ao5xsbvE
+        OV90FobRMaoxAHv7ve2tKmDbfMh3BzUG4EvNUeFm+w1bQ0qqMWDmCA2Ybs+zNaSkGgPwsvyys04lqsPq
+        9vdi3gJIXKBwoVK1COIb40TrMXvuDFRnQFqioDhwjItVQGMAyU0CD8aCldAYYAwwBpDsCMaAUTKA+1MU
+        n/NcrALmb8CzzkeSHeEpjHGxCpi/AZdaj+TS1leSLmUTfl+EMS5WAfM3ADkO/fyN9pycAuJvLkYRi2FA
+        jjQGkNwknNCdYxJ04yuSm4QTuDUmQStageuR3CRG/iMp+kxOh++D+7F7Zq12nOTygKDR/VASgZsNmEQt
+        6ATeDMncB1KMQXAjnqwBm6l3keBOC0go80aJ/whPt99nW+IyyUsH3GQAyVpsmMCdLyQrG+CeuY7uMZOW
+        hbjpo0pyBgPutIBJlvZMWhY2Ml/2fYELY+jehkkXYycpIrHG6tC2zcVx2hcnsJvClrIoGyd7tUBNWBuV
+        aWBgkAaVyj/TNtsvf2lZngAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="saleBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>131, 17</value>
   </metadata>
